[tool.poetry]
name = "jupyterhub-user-server"
version = "1.0.0"
description = "This project contains all the necessary python dependencies for the JupyterHub user server."
authors = ["Bervinov Oleg <bervinov.ob@gmail.com>"]
maintainers = ["Bervinov Oleg <bervinov.ob@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/obervinov/images/jupyterhub"
repository = "https://github.com/obervinov/images"
documentation = "https://github.com/obervinov/images/jupyterhub/blob/main/README.md"
keywords = ["jupyterhub", "python", "poetry", "user-server"]
package-mode = false

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/obervinov/images/issues"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2"
webdavclient3 = "^3"
logger = { git = "https://github.com/obervinov/logger-package.git", tag = "v2.0.0" }
vault  = { git = "https://github.com/obervinov/vault-package.git", tag = "v4.0.0" }

[tool.poetry.group.dev.dependencies]
pylint = "^3"
flake8 = "^7"
pytest = "^8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
